# dotrs

./: .env  .gitignore  Cargo.toml  README.md  Taskfile.yaml  testenv.Dockerfile
.github/workflows/: releases.yml
service/launchd/: de.zekro.dotrs.plist
service/systemd/: dotrs.service
src/: config.rs  filecache.rs  logging.rs  main.rs  profile.rs
src/commands/: apply.rs  cd.rs  clean.rs  encrypt.rs  import.rs  list.rs  mod.rs  pull.rs  service.rs  update.rs
src/encryption/: errors.rs  mod.rs
src/profile/: errors.rs  mod.rs
src/service/: mod.rs
src/util/: dotfiles.rs  fs.rs  git.rs  mod.rs
