[package]
name = "dotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
debounce = "0.2.2"
dirs = "5"
dotenv = "0.15.0"
duration-string = { version = "0.4.0", features = ["serde"] }
env_logger = "0.11.5"
envconfig = "0.11.0"
ignore = "0.4.23"
log = "0.4.22"
notify = "6.1.1"
structured-logger = "1.0.3"
thiserror = "1.0.64"
tracing-subscriber = "0.3.18"
yansi = "1.0.1"

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
panic = "unwind"
