[package]
name = "dotrs"
version = "0.1.0"
edition = "2021"
description = "A dotfiles manager trying to make syncing dotfiles as seemingless as possible."
authors = ["Ringo Hoffmann <contact@zekro.de>"]
categories = ["command-line-interface"]
keywords = ["dotfiles", "cli", "dotfiles-manager"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
base64 = "0.22.1"
clap = { version = "4", features = ["derive", "env"] }
debounce = "0.2.2"
dirs = "5"
duration-string = { version = "0.4.0", features = ["serde"] }
env_logger = "0.11.5"
handlebars = "6.1.0"
ignore = "0.4.23"
inquire = "0.7.5"
log = "0.4.22"
notify = "7.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.64"
yansi = "1.0.1"

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
panic = "unwind"
